three blocks redy & footer

--- a/index.html
+++ b/index.html
@@ -6,9 +6,129 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="typografy.css">
+    <link rel="stylesheet" href="colors.css">
+    <link rel="stylesheet" href="elements.css">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+    <!--<link href="//db.onlinewebfonts.com/c/38d41072aa88a50711d4d50dd0d50f6b?family=Neue+Machina" rel="stylesheet"
+        type="text/css" />-->
+
 </head>
 
 <body>
+    <!--Header-->
+    <div class="header">
+        <div class="container-menu">
+            <div style="display: flex; align-items: center;">
+                <h1 class="logo">Pro ––– eco pen</h1>
+                <ul class="menu">
+                    <li><a href="" class="title2">О&nbsp;нас</a> </li>
+                    <li><a href="" class="title2">Продукция</a></li>
+                    <li><a href="" class="title2">Контакты</a></li>
+                </ul>
+            </div>
+            <div style="display: flex; align-items: center;">
+                <button class="bg-secondary btn"><img src="icons/menu_list_square_negative.svg" alt="katalog">
+                    <span class="title2 color-primary-50">&nbsp;Каталог
+                    </span>
+                </button>
+                <button class="btn bg-white"><img src="icons/phone_call.svg" alt="phone"></button>
+            </div>
+        </div>
+    </div>
+    <!--Head-->
+    <div class="head">
+        <div class="container">
+            <img src="img/proeco.png" alt="logo" style="margin-bottom: 100px; margin-top: 80px;">
+        </div>
+    </div>
+    <div class="video">
+        <div class="clip">
+            <video src="video/3D5.mp4" controls poster="img/tepor.png"></video>
+        </div>
+        <div class="clip-text">
+            <div class="title1">Мы производим <span class="color-primary">конечные продукты</span></div>
+            <div class="title2">Из многокомпонентного
+                и сложноперерабатываемого вторсырья, тем самым мы замыкаем цепочку сбора и переработки отходов.
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="slogan">
+            <div class="slogan-title">Наш слоган «<span class="color-primary">Дадим упаковке вторую жизнь!</span>»</div>
+            <div class="slogan-text">За&nbsp;<span class="color-primary">2020</span> год мы&nbsp;произвели более <span
+                    class="color-primary">200&nbsp;тыс. ручек и&nbsp;блокнотов</span>, при
+                этом переработано более <span class="color-primary">1&nbsp;200&nbsp;000 литровых пакетов Тетра
+                    Пак</span> (1,2&nbsp;тыс. контейнеров мусора
+                не&nbsp;уехали на&nbsp;свалку)</div>
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="what">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="pens">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="fact">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="notebook">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="proecopen">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="accesories">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="numbers">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="faq">
+
+        </div>
+    </div>
+    <div class="container">
+        <div class="tobuy">
+
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-address">
+            <h3 class="logo color-primary-50">Pro ––– eco pen</h3>
+            <p class="title2 color-primary-50">Московская область, городской округ Балашиха, деревня Полтево, владение
+                115Д</p>
+        </div>
+        <div class="footer-icons">
+            <ul class="menu">
+                <li><a href="https://www.youtube.com/@proecopen2755"><img src="icons/youtube_negative.svg"
+                            alt="youtube"></a></li>
+                <li><a href="https://api.whatsapp.com/send?phone=79266026441&text=Звонок%20с%20сайта"><img
+                            src="icons/whatsup_negative.svg" alt="whatsapp" srcset=""></a></li>
+                <li><a href="https://t.me/ProEcoPen_bot"><img src="icons/telegram_negative.svg" alt="telegram"></a></li>
+                <li><a href="https://www.instagram.com/proecopen/"><img src="icons/instagram_negative.svg"
+                            alt="instagram"></a></li>
+            </ul>
+        </div>
+
+    </div>
 
 </body>
 
