--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="menu">
                     <li><a href="" class="title2">О&nbsp;нас</a> </li>
                     <li><a href="" class="title2">Продукция</a></li>
-                    <li><a href="" class="title2">Контакты</a></li>
+                    <li><a href="#footer" class="title2">Контакты</a></li>
                 </ul>
             </div>
             <div style="display: flex; align-items: center;">
@@ -110,11 +110,12 @@
 
         </div>
     </div>
-    <div class="footer">
+    <div class="footer" id="footer">
         <div class="footer-address">
             <h3 class="logo color-primary-50">Pro ––– eco pen</h3>
             <p class="title2 color-primary-50">Московская область, городской округ Балашиха, деревня Полтево, владение
                 115Д</p>
+            <p class="title2 color-primary-50"></p>
         </div>
         <div class="footer-icons">
             <ul class="menu">
