--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
             <h3 class="logo color-primary-50">Pro ––– eco pen</h3>
             <p class="title2 color-primary-50">Московская область, городской округ Балашиха, деревня Полтево, владение
                 115Д</p>
-            <p class="title2 color-primary-50"></p>
+            <p class="title2 color-primary-50"><img src="icons/phone_negative.svg" alt="">+7&nbsp;926&nbsp;602-64-41,
+                +7&nbsp;495&nbsp;640-48-25</p>
         </div>
         <div class="footer-icons">
             <ul class="menu">
