minimal navigation about, contacts

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div style="display: flex; align-items: center;">
                 <h1 class="logo">Pro ––– eco pen</h1>
                 <ul class="menu">
-                    <li><a href="" class="title2">О&nbsp;нас</a> </li>
+                    <li><a href="#video" class="title2">О&nbsp;нас</a> </li>
                     <li><a href="" class="title2">Продукция</a></li>
                     <li><a href="#footer" class="title2">Контакты</a></li>
                 </ul>
@@ -43,7 +43,7 @@
             <img src="img/proeco.png" alt="logo" style="margin-bottom: 100px; margin-top: 80px;">
         </div>
     </div>
-    <div class="video">
+    <div class="video" id="video">
         <div class="clip">
             <video src="video/3D5.mp4" controls poster="img/tepor.png"></video>
         </div>
