block what an text from block pens

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             </div>
             <div style="display: flex; align-items: center;">
                 <button class="bg-secondary btn"><img src="icons/menu_list_square_negative.svg" alt="katalog">
-                    <span class="title2 color-primary-50">&nbsp;Каталог
+                    <span class="title2 color-primary-50" style="border:none">&nbsp;Каталог
                     </span>
                 </button>
-                <button class="btn bg-white"><img src="icons/phone_call.svg" alt="phone"></button>
+                <button class="btn bg-white" style="border:none"><img src="icons/phone_call.svg" alt="phone"></button>
             </div>
         </div>
     </div>
@@ -65,15 +65,37 @@
 
         </div>
     </div>
-    <div class="container">
+    <div class="container-menu">
         <div class="what">
-
+            <h3 class="what-text" style="padding-left: 20vw;">ЧТО</h3>
+            <h3 class="what-text" style="padding-left: 10vw;">МЫ</h3>
+            <h3 class="what-text" style="padding-left: 14vw;">ДЕЛАЕМ</h3>
+            <img src="img/what.png" alt="proecopen 340">
         </div>
     </div>
-    <div class="container">
-        <div class="pens">
+    <div class="pens">
+        <div class="container">
+            <div class="pens-title"></div>
 
         </div>
+        <div class="pens-line"></div>
+        <div class="container">
+            <ul class="pens-text">
+                <li>Упаковка Tetra Pak состоит на&nbsp;75% из&nbsp;картона, на&nbsp;23% из&nbsp;полиэтилена
+                    и&nbsp;на&nbsp;2% из&nbsp;алюминия. Использованные упаковки сначала отправляются
+                    на&nbsp;сортировочный цех, а&nbsp;потом на&nbsp;заводы по&nbsp;переработке.</li>
+                <li>Сначала упаковку делят на&nbsp;целлюлозное волокно и&nbsp;полиалюминий&nbsp;&mdash; смесь
+                    полиэтилена и&nbsp;алюминия. Далее полиалюминий очищают и&nbsp;гранулируют.</li>
+                <li>Из&nbsp;полиалюминиевых гранул делаются ручки &laquo;Эко&raquo; и&nbsp;другие сувениры.</li>
+            </ul>
+        </div>
+        <div class="pens-images"></div>
+
+        <div class="container"><a href="#" style="text-decoration: none;">
+                <button type="button" class="btn color-secondary title2 bg-primary-50"
+                    style="border-color: var(--clr-primary); ">Каталог PDF</button></a>
+        </div>
+    </div>
     </div>
     <div class="container">
         <div class="fact">
@@ -115,19 +137,22 @@
             <h3 class="logo color-primary-50">Pro ––– eco pen</h3>
             <p class="title2 color-primary-50">Московская область, городской округ Балашиха, деревня Полтево, владение
                 115Д</p>
+        </div>
+        <div class="footer-bottom">
             <p class="title2 color-primary-50"><img src="icons/phone_negative.svg" alt="">+7&nbsp;926&nbsp;602-64-41,
                 +7&nbsp;495&nbsp;640-48-25</p>
-        </div>
-        <div class="footer-icons">
-            <ul class="menu">
-                <li><a href="https://www.youtube.com/@proecopen2755"><img src="icons/youtube_negative.svg"
-                            alt="youtube"></a></li>
-                <li><a href="https://api.whatsapp.com/send?phone=79266026441&text=Звонок%20с%20сайта"><img
-                            src="icons/whatsup_negative.svg" alt="whatsapp" srcset=""></a></li>
-                <li><a href="https://t.me/ProEcoPen_bot"><img src="icons/telegram_negative.svg" alt="telegram"></a></li>
-                <li><a href="https://www.instagram.com/proecopen/"><img src="icons/instagram_negative.svg"
-                            alt="instagram"></a></li>
-            </ul>
+            <div class="footer-icons">
+                <ul class="menu">
+                    <li><a href="https://www.youtube.com/@proecopen2755"><img src="icons/youtube_negative.svg"
+                                alt="youtube"></a></li>
+                    <li><a href="https://api.whatsapp.com/send?phone=79266026441&text=Звонок%20с%20сайта"><img
+                                src="icons/whatsup_negative.svg" alt="whatsapp" srcset=""></a></li>
+                    <li><a href="https://t.me/ProEcoPen_bot"><img src="icons/telegram_negative.svg" alt="telegram"></a>
+                    </li>
+                    <li><a href="https://www.instagram.com/proecopen/"><img src="icons/instagram_negative.svg"
+                                alt="instagram"></a></li>
+                </ul>
+            </div>
         </div>
 
     </div>
